# admin-powershell-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: policy.example.toml
crates/admin-broker/: Cargo.toml
crates/admin-broker/src/: main.rs
crates/admin-common/: Cargo.toml
crates/admin-common/src/: lib.rs
crates/admin-mcp-server/: Cargo.toml
crates/admin-mcp-server/src/: main.rs
scripts/: install-service.ps1  uninstall-service.ps1
