[workspace]
members = [
    "crates/admin-common",
    "crates/admin-broker",
    "crates/admin-mcp-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "io-std", "process", "time"] }
rmcp = { version = "2.0.0", features = ["server", "transport-io"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
] }
