[package]
name = "admin-broker"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
admin-common = { path = "../admin-common" }
anyhow.workspace = true
regex = "1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml = "0.9"
windows.workspace = true
windows-service = "0.8.1"
